crates/kula-core/tests/snapshots/export__example_03_three_generations.snap
---
source: crates/kula-core/tests/export.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kula": "0.1",
  "graph": {
    "persons": [
      {
        "id": "ramesh",
        "name": "Ramesh Sharma",
        "gender": "male",
        "born": {
          "value": "1925-03-10",
          "precision": "day",
          "circa": false
        },
        "died": {
          "value": "2005-08-22",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "sita",
        "name": "Sita Sharma",
        "gender": "female",
        "born": {
          "value": "1928-07-15",
          "precision": "day",
          "circa": false
        },
        "died": {
          "value": "2010-11-04",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "alice",
        "name": "Alice Sharma",
        "gender": "female",
        "born": {
          "value": "1950-04-12",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "bob",
        "name": "Bob Sharma",
        "gender": "male",
        "born": {
          "value": "1948-11-30",
          "precision": "day",
          "circa": false
        },
        "died": {
          "value": "2020-03-15",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "carol",
        "name": "Carol Sharma",
        "gender": "female",
        "born": {
          "value": "1975-09-03",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "ravi",
        "name": "Ravi Sharma",
        "gender": "male",
        "born": {
          "value": "1980",
          "precision": "year",
          "circa": true
        }
      }
    ],
    "marriages": [
      {
        "id": "m_ramesh_sita",
        "spouses": [
          "ramesh",
          "sita"
        ],
        "start": {
          "value": "1948-06-10",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_alice_bob",
        "spouses": [
          "alice",
          "bob"
        ],
        "start": {
          "value": "1972-05-12",
          "precision": "day",
          "circa": false
        },
        "end": {
          "value": "1990-08-01",
          "precision": "day",
          "circa": false
        },
        "end_reason": "divorce"
      }
    ],
    "parenthood_links": [
      {
        "marriage_id": "m_ramesh_sita",
        "child_id": "alice",
        "kind": "biological"
      },
      {
        "marriage_id": "m_alice_bob",
        "child_id": "carol",
        "kind": "biological"
      },
      {
        "marriage_id": "m_alice_bob",
        "child_id": "ravi",
        "kind": "adoptive",
        "start": {
          "value": "1985-06-01",
          "precision": "day",
          "circa": false
        }
      }
    ]
  }
}
