crates/kula-core/tests/snapshots/export__example_04_polygamous_family_with_positions.snap
---
source: crates/kula-core/tests/export.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kula": "0.1",
  "graph": {
    "persons": [
      {
        "id": "alice",
        "name": "Alice Sharma",
        "gender": "female",
        "born": {
          "value": "1950-04-12",
          "precision": "day",
          "circa": false
        },
        "span": [
          216,
          282
        ]
      },
      {
        "id": "devraj",
        "name": "Devraj Kumar",
        "gender": "male",
        "born": {
          "value": "1948-06-21",
          "precision": "day",
          "circa": false
        },
        "span": [
          283,
          349
        ]
      },
      {
        "id": "meera",
        "name": "Meera",
        "gender": "female",
        "born": {
          "value": "1955-03-08",
          "precision": "day",
          "circa": false
        },
        "span": [
          350,
          416
        ]
      },
      {
        "id": "priya",
        "name": "Priya Kumar",
        "gender": "female",
        "born": {
          "value": "1994-12-01",
          "precision": "day",
          "circa": false
        },
        "span": [
          418,
          505
        ]
      }
    ],
    "marriages": [
      {
        "id": "m_devraj_meera",
        "spouses": [
          "devraj",
          "meera"
        ],
        "start": {
          "value": "1990-01-01",
          "precision": "day",
          "circa": false
        },
        "span": [
          507,
          562
        ]
      },
      {
        "id": "m_alice_devraj",
        "spouses": [
          "alice",
          "devraj"
        ],
        "start": {
          "value": "1992-02-14",
          "precision": "day",
          "circa": false
        },
        "span": [
          563,
          618
        ]
      }
    ],
    "parenthood_links": [
      {
        "marriage_id": "m_alice_devraj",
        "child_id": "priya",
        "kind": "biological",
        "span": [
          485,
          505
        ]
      }
    ]
  }
}
